--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"ext-pdo": "*",
 		"ext-json": "*",
 		"ext-curl": "*",
-		"ext-simplexml": "*"
+		"ext-simplexml": "*",
+		"vlucas/phpdotenv": "^5.3"
 	},
 	"autoload": {
 		"psr-4": {
