change folder structure & update vhost

--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -28,6 +28,10 @@ RUN mkdir /var/www/html/logs && chmod 775 /var/www/html/logs
 COPY php.ini /usr/local/etc/php/php.ini
 COPY docker-php-ext-opcache.ini /usr/local/etc/php/conf.d/opcache.ini
 COPY school-management.conf /etc/apache2/sites-available/school-management.conf
-COPY school-management.conf /etc/apache2/sites-enabled/school-management.conf
+RUN cd /etc/apache2/sites-available/ && \
+    a2ensite school-management.conf && \
+    a2dissite 000-default.conf && \
+    a2enmod rewrite && a2enmod headers && a2enmod expires && a2enmod ssl && \
+    service apache2 restart
 
 EXPOSE 8082
