--- a/php-apache/school-management.conf
+++ b/php-apache/school-management.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
     ServerName school-management.local
 
-    DocumentRoot /var/www/html
+    DocumentRoot /var/www/html/public
     DirectoryIndex /index.php
 
-    <Directory /var/www/html>
+    <Directory /var/www/html/public>
         AllowOverride None
         Require all granted
 
