--- a/app/composer.json
+++ b/app/composer.json
@@ -22,7 +22,12 @@
 		"ext-iconv": "*",
 		"ext-pdo": "*",
 		"ext-json": "*",
-		"vlucas/phpdotenv": "^5.3"
+		"vlucas/phpdotenv": "^5.3",
+		"psr/log": "^1.1",
+		"slim/slim": "4.*",
+		"guzzlehttp/psr7": "^1.7",
+		"http-interop/http-factory-guzzle": "^1.0",
+		"slim/psr7": "^1.3"
 	},
 	"autoload": {
 		"psr-4": {
